[package]
name = "black_swan"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
actix-service = "2.0.3"
futures-util = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.0"  # For JWT authentication
dotenvy = "0.15"     # Load environment variables
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }  # PostgreSQL
tokio = { version = "1.44.1", features = ["full"] }
bcrypt = "0.17.0"     # Hashing passwords
